--- a/app/src/main/res/layout/activity_term_list.xml
+++ b/app/src/main/res/layout/activity_term_list.xml
@@ -21,15 +21,17 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/termRecyclerView"
-        android:layout_width="409dp"
-        android:layout_height="657dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
+        android:layout_width="408dp"
+        android:layout_height="654dp"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="2dp"
+        android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/FABAddTerm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+    */
 
 </androidx.constraintlayout.widget.ConstraintLayout>
