--- a/app/src/main/res/layout/activity_term_details.xml
+++ b/app/src/main/res/layout/activity_term_details.xml
@@ -7,8 +7,8 @@
     tools:context=".UI.TermDetails">
 
     <LinearLayout
-        android:layout_width="411dp"
-        android:layout_height="731dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -22,7 +22,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autofillHints="Term Name"
-            android:inputType="text" />
+            android:inputType="text"
+            android:text="Term Name" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -41,7 +42,8 @@
                 android:layout_weight="1"
                 android:autofillHints="Start Date"
                 android:ems="10"
-                android:inputType="none" />
+                android:inputType="none"
+                android:text="Start Date" />
 
             <EditText
                 android:id="@+id/termEndDate"
@@ -50,7 +52,8 @@
                 android:layout_weight="1"
                 android:autofillHints="End Date"
                 android:ems="10"
-                android:inputType="none" />
+                android:inputType="none"
+                android:text="End Date" />
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
