--- a/app/src/main/res/layout/activity_assessment_details.xml
+++ b/app/src/main/res/layout/activity_assessment_details.xml
@@ -19,8 +19,8 @@
             android:layout_height="wrap_content"
             android:autofillHints="Assessment Name"
             android:ems="10"
-            android:inputType="text"
-            android:text="Assessment Name" />
+            android:hint="Assessment Name"
+            android:inputType="text" />
 
         <EditText
             android:id="@+id/assessmentType"
@@ -28,8 +28,8 @@
             android:layout_height="wrap_content"
             android:autofillHints="Assessment Type"
             android:ems="10"
-            android:inputType="text"
-            android:text="Assessment Type" />
+            android:hint="Assessment Type"
+            android:inputType="text" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -43,8 +43,8 @@
                 android:layout_weight="1"
                 android:autofillHints="Start Date"
                 android:ems="10"
-                android:inputType="none"
-                android:text="Start Date" />
+                android:hint="Start Date"
+                android:inputType="none" />
 
             <EditText
                 android:id="@+id/assessmentEndDate"
@@ -53,8 +53,8 @@
                 android:layout_weight="1"
                 android:autofillHints="End Date"
                 android:ems="10"
-                android:inputType="none"
-                android:text="End Date" />
+                android:hint="End Date"
+                android:inputType="none" />
 
         </LinearLayout>
 
@@ -70,8 +70,8 @@
                 android:layout_weight="1"
                 android:autofillHints="Start Alert"
                 android:ems="10"
-                android:inputType="none"
-                android:text="Start Alert" />
+                android:hint="Start Alert"
+                android:inputType="none" />
 
             <EditText
                 android:id="@+id/assessmentEndAlert"
@@ -80,8 +80,8 @@
                 android:layout_weight="1"
                 android:autofillHints="End Alert"
                 android:ems="10"
-                android:inputType="none"
-                android:text="End Alert" />
+                android:hint="End Alert"
+                android:inputType="none" />
         </LinearLayout>
 
         <Button
