--- a/app/src/main/res/layout/activity_course_details.xml
+++ b/app/src/main/res/layout/activity_course_details.xml
@@ -25,8 +25,8 @@
             android:layout_height="wrap_content"
             android:autofillHints="Course Name"
             android:ems="10"
-            android:inputType="text"
-            android:text="Course Name" />
+            android:hint="Course Name"
+            android:inputType="text" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -45,8 +45,8 @@
                 android:layout_weight="1"
                 android:autofillHints="Start Date"
                 android:ems="10"
-                android:inputType="none"
-                android:text="Start Date" />
+                android:hint="Start Date"
+                android:inputType="none" />
 
             <EditText
                 android:id="@+id/courseEndDate"
@@ -55,8 +55,8 @@
                 android:layout_weight="1"
                 android:autofillHints="End Date"
                 android:ems="10"
-                android:inputType="none"
-                android:text="End Date" />
+                android:hint="End Date"
+                android:inputType="none" />
         </LinearLayout>
 
         <EditText
@@ -65,8 +65,8 @@
             android:layout_height="wrap_content"
             android:autofillHints="Course Status"
             android:ems="10"
-            android:inputType="none"
-            android:text="Course Status" />
+            android:hint="Course Status"
+            android:inputType="none" />
 
         <EditText
             android:id="@+id/ciName"
@@ -74,8 +74,8 @@
             android:layout_height="wrap_content"
             android:autofillHints="Instructors Name"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:text="Instructor Name" />
+            android:hint="Instructor Name"
+            android:inputType="textPersonName" />
 
         <EditText
             android:id="@+id/ciPhone"
@@ -83,8 +83,8 @@
             android:layout_height="wrap_content"
             android:autofillHints="Instructors Phone"
             android:ems="10"
-            android:inputType="phone"
-            android:text="Instructor Phone" />
+            android:hint="Instructor Phone"
+            android:inputType="phone" />
 
         <EditText
             android:id="@+id/ciEmail"
@@ -92,8 +92,8 @@
             android:layout_height="wrap_content"
             android:autofillHints="Instructors Email"
             android:ems="10"
-            android:inputType="textEmailAddress"
-            android:text="Instructor Email" />
+            android:hint="Instructor Email"
+            android:inputType="textEmailAddress" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -107,8 +107,8 @@
                 android:layout_weight="1"
                 android:autofillHints="Start Alert"
                 android:ems="10"
-                android:inputType="none"
-                android:text="Start Alert" />
+                android:hint="Start Alert"
+                android:inputType="none" />
 
             <EditText
                 android:id="@+id/courseEndAlert"
@@ -117,8 +117,8 @@
                 android:layout_weight="1"
                 android:autofillHints="End Alert"
                 android:ems="10"
-                android:inputType="none"
-                android:text="End Alert" />
+                android:hint="End Alert"
+                android:inputType="none" />
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
@@ -133,8 +133,8 @@
             android:autofillHints="Notes:"
             android:ems="10"
             android:gravity="start|top"
-            android:inputType="textMultiLine"
-            android:text="Notes" />
+            android:hint="Notes:"
+            android:inputType="textMultiLine" />
 
         <Button
             android:id="@+id/courseSaveButton"
