--- a/app/src/main/res/layout/activity_term_details.xml
+++ b/app/src/main/res/layout/activity_term_details.xml
@@ -22,8 +22,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autofillHints="Term Name"
-            android:inputType="text"
-            android:text="Term Name" />
+            android:hint="Term Name"
+            android:inputType="text" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -42,8 +42,8 @@
                 android:layout_weight="1"
                 android:autofillHints="Start Date"
                 android:ems="10"
-                android:inputType="none"
-                android:text="Start Date" />
+                android:hint="Start Date"
+                android:inputType="none" />
 
             <EditText
                 android:id="@+id/termEndDate"
@@ -52,8 +52,8 @@
                 android:layout_weight="1"
                 android:autofillHints="End Date"
                 android:ems="10"
-                android:inputType="none"
-                android:text="End Date" />
+                android:hint="End Date"
+                android:inputType="none" />
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
