--- a/app/src/main/res/layout/term_list_item.xml
+++ b/app/src/main/res/layout/term_list_item.xml
@@ -3,16 +3,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="20dp">
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:text="Term"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         tools:layout_editor_absoluteX="19dp"
         tools:layout_editor_absoluteY="65dp"
-        android:orientation="vertical"/>
+        android:orientation="vertical" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
