--- a/app/src/main/res/layout/activity_assessments_list.xml
+++ b/app/src/main/res/layout/activity_assessments_list.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.AssessmentsList">
+    tools:context=".UI.AssessmentList">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/assessmentRecyclerView"
-        android:layout_width="408dp"
-        android:layout_height="654dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginStart="2dp"
         android:layout_marginTop="2dp"
         android:layout_marginEnd="2dp"
