--- a/app/src/main/res/layout/activity_course_details.xml
+++ b/app/src/main/res/layout/activity_course_details.xml
@@ -6,147 +6,156 @@
     android:layout_height="match_parent"
     tools:context=".UI.CourseDetails">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/courseName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:autofillHints="Course Name"
-            android:ems="10"
-            android:hint="Course Name"
-            android:inputType="text" />
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:layout_marginStart="1dp"
+            android:layout_marginTop="1dp"
+            android:layout_marginEnd="1dp"
+            android:layout_marginBottom="1dp"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <EditText
-                android:id="@+id/courseStartDate"
-                android:layout_width="wrap_content"
+                android:id="@+id/courseName"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:autofillHints="Start Date"
+                android:autofillHints="Course Name"
                 android:ems="10"
-                android:hint="Start Date"
+                android:hint="Course Name"
+                android:inputType="text" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/courseStartDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:autofillHints="Start Date"
+                    android:ems="10"
+                    android:hint="Start Date"
+                    android:inputType="none" />
+
+                <EditText
+                    android:id="@+id/courseEndDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:autofillHints="End Date"
+                    android:ems="10"
+                    android:hint="End Date"
+                    android:inputType="none" />
+            </LinearLayout>
+
+            <EditText
+                android:id="@+id/courseStatus"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:autofillHints="Course Status"
+                android:ems="10"
+                android:hint="Course Status"
                 android:inputType="none" />
 
             <EditText
-                android:id="@+id/courseEndDate"
-                android:layout_width="wrap_content"
+                android:id="@+id/ciName"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:autofillHints="End Date"
+                android:autofillHints="Instructors Name"
                 android:ems="10"
-                android:hint="End Date"
-                android:inputType="none" />
+                android:hint="Instructor Name"
+                android:inputType="textPersonName" />
+
+            <EditText
+                android:id="@+id/ciPhone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:autofillHints="Instructors Phone"
+                android:ems="10"
+                android:hint="Instructor Phone"
+                android:inputType="phone" />
+
+            <EditText
+                android:id="@+id/ciEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:autofillHints="Instructors Email"
+                android:ems="10"
+                android:hint="Instructor Email"
+                android:inputType="textEmailAddress" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/courseStartAlert"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:autofillHints="Start Alert"
+                    android:ems="10"
+                    android:hint="Start Alert"
+                    android:inputType="none" />
+
+                <EditText
+                    android:id="@+id/courseEndAlert"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:autofillHints="End Alert"
+                    android:ems="10"
+                    android:hint="End Alert"
+                    android:inputType="none" />
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/assessmentRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="138dp" />
+
+            <EditText
+                android:id="@+id/courseNotes"
+                android:layout_width="match_parent"
+                android:layout_height="112dp"
+                android:autofillHints="Notes:"
+                android:ems="10"
+                android:gravity="start|top"
+                android:hint="Notes:"
+                android:inputType="textMultiLine" />
+
+            <Button
+                android:id="@+id/courseSaveButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="SAVE" />
+
+            <Button
+                android:id="@+id/courseCancelButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="CANCEL" />
+
         </LinearLayout>
+    </ScrollView>
 
-        <EditText
-            android:id="@+id/courseStatus"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:autofillHints="Course Status"
-            android:ems="10"
-            android:hint="Course Status"
-            android:inputType="none" />
-
-        <EditText
-            android:id="@+id/ciName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:autofillHints="Instructors Name"
-            android:ems="10"
-            android:hint="Instructor Name"
-            android:inputType="textPersonName" />
-
-        <EditText
-            android:id="@+id/ciPhone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:autofillHints="Instructors Phone"
-            android:ems="10"
-            android:hint="Instructor Phone"
-            android:inputType="phone" />
-
-        <EditText
-            android:id="@+id/ciEmail"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:autofillHints="Instructors Email"
-            android:ems="10"
-            android:hint="Instructor Email"
-            android:inputType="textEmailAddress" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/courseStartAlert"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:autofillHints="Start Alert"
-                android:ems="10"
-                android:hint="Start Alert"
-                android:inputType="none" />
-
-            <EditText
-                android:id="@+id/courseEndAlert"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:autofillHints="End Alert"
-                android:ems="10"
-                android:hint="End Alert"
-                android:inputType="none" />
-        </LinearLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/assessmentRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="138dp" />
-
-        <EditText
-            android:id="@+id/courseNotes"
-            android:layout_width="match_parent"
-            android:layout_height="112dp"
-            android:autofillHints="Notes:"
-            android:ems="10"
-            android:gravity="start|top"
-            android:hint="Notes:"
-            android:inputType="textMultiLine" />
-
-        <Button
-            android:id="@+id/courseSaveButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="SAVE" />
-
-        <Button
-            android:id="@+id/courseCancelButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="CANCEL" />
-
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
