--- a/app/src/main/res/layout/activity_term_details.xml
+++ b/app/src/main/res/layout/activity_term_details.xml
@@ -57,7 +57,7 @@
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/courseRecyclerView"
+            android:id="@+id/courseRecyclerViewForTerm"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
