--- a/app/src/main/res/layout/activity_course_details.xml
+++ b/app/src/main/res/layout/activity_course_details.xml
@@ -67,7 +67,7 @@
             </LinearLayout>
 
             <Spinner
-                android:id="@+id/courseStatus"
+                android:id="@+id/courseStatusSpinner"
                 android:layout_width="match_parent"
                 android:layout_height="40dp" />
 
