--- a/app/src/main/res/menu/menu_term_details.xml
+++ b/app/src/main/res/menu/menu_term_details.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/termdelete"
+        android:id="@+id/termDelete"
         android:title="Delete Term" />
 
     <item
