--- a/app/src/main/res/layout/activity_assessment_details.xml
+++ b/app/src/main/res/layout/activity_assessment_details.xml
@@ -4,17 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundColor"
     tools:context=".UI.AssessmentDetails">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="1dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <EditText
             android:id="@+id/assessmentName"
+            android:textColor="@color/textColor"
+            android:textColorHint="@color/textColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autofillHints="Assessment Name"
@@ -24,6 +33,8 @@
 
         <EditText
             android:id="@+id/assessmentType"
+            android:textColor="@color/textColor"
+            android:textColorHint="@color/textColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autofillHints="Assessment Type"
@@ -34,10 +45,17 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <EditText
                 android:id="@+id/assessmentStartDate"
+                android:textColor="@color/textColor"
+                android:textColorHint="@color/textColor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -46,8 +64,21 @@
                 android:hint="Start Date"
                 android:inputType="none" />
 
+            <TextView
+                android:id="@+id/textView6"
+                android:textColor="@color/textColor"
+                android:textColorHint="@color/textColor"
+                android:layout_width="63dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="-"
+                android:textAlignment="center"
+                android:textSize="20sp" />
+
             <EditText
                 android:id="@+id/assessmentEndDate"
+                android:textColor="@color/textColor"
+                android:textColorHint="@color/textColor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -55,18 +86,17 @@
                 android:ems="10"
                 android:hint="End Date"
                 android:inputType="none" />
-
         </LinearLayout>
 
         <Spinner
             android:id="@+id/courseSpinner"
             android:layout_width="match_parent"
-            android:layout_height="40dp" />
+            android:layout_height="40dp"
+            android:backgroundTint="@color/textColor"
+            android:textColor="@color/textColor"
+            android:textColorHint="@color/textColor" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"/>
+
 
         <Button
             android:id="@+id/assessmentSaveButton"
@@ -78,6 +108,8 @@
             android:id="@+id/assessmentCancelButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:backgroundTint="#838181"
             android:text="CANCEL" />
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
