--- a/app/src/main/res/layout/activity_assessments_list.xml
+++ b/app/src/main/res/layout/activity_assessments_list.xml
@@ -4,10 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundColor"
     tools:context=".UI.AssessmentList">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/assessmentRecyclerView"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="2dp"
