--- a/app/src/main/res/layout/activity_course_details.xml
+++ b/app/src/main/res/layout/activity_course_details.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundColor"
     tools:context=".UI.CourseDetails">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
 
@@ -28,6 +30,8 @@
 
             <EditText
                 android:id="@+id/courseName"
+                android:textColor="@color/textColor"
+                android:textColorHint="@color/textColor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:autofillHints="Course Name"
@@ -47,6 +51,8 @@
 
                 <EditText
                     android:id="@+id/courseStartDate"
+                    android:textColor="@color/textColor"
+                    android:textColorHint="@color/textColor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -55,8 +61,21 @@
                     android:hint="Start Date"
                     android:inputType="none" />
 
+                <TextView
+                    android:id="@+id/textView7"
+                    android:textColor="@color/textColor"
+                    android:textColorHint="@color/textColor"
+                    android:layout_width="63dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="-"
+                    android:textAlignment="center"
+                    android:textSize="20sp" />
+
                 <EditText
                     android:id="@+id/courseEndDate"
+                    android:textColor="@color/textColor"
+                    android:textColorHint="@color/textColor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -68,11 +87,16 @@
 
             <Spinner
                 android:id="@+id/courseStatusSpinner"
+                android:textColor="@color/textColor"
+                android:textColorHint="@color/textColor"
                 android:layout_width="match_parent"
-                android:layout_height="40dp" />
+                android:layout_height="40dp"
+                android:backgroundTint="@color/textColor" />
 
             <EditText
                 android:id="@+id/ciName"
+                android:textColor="@color/textColor"
+                android:textColorHint="@color/textColor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:autofillHints="Instructors Name"
@@ -82,6 +106,8 @@
 
             <EditText
                 android:id="@+id/ciPhone"
+                android:textColor="@color/textColor"
+                android:textColorHint="@color/textColor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:autofillHints="Instructors Phone"
@@ -91,6 +117,8 @@
 
             <EditText
                 android:id="@+id/ciEmail"
+                android:textColor="@color/textColor"
+                android:textColorHint="@color/textColor"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:autofillHints="Instructors Email"
@@ -100,13 +128,16 @@
 
             <Spinner
                 android:id="@+id/termSpinner"
+                android:textColor="@color/textColor"
+                android:textColorHint="@color/textColor"
                 android:layout_width="match_parent"
-                android:layout_height="40dp" />
+                android:layout_height="40dp"
+                android:backgroundTint="@color/textColor" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"/>
+                android:orientation="horizontal" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/assessmentRecyclerView"
@@ -115,6 +146,8 @@
 
             <EditText
                 android:id="@+id/courseNotes"
+                android:textColor="@color/textColor"
+                android:textColorHint="@color/textColor"
                 android:layout_width="match_parent"
                 android:layout_height="112dp"
                 android:autofillHints="Notes:"
@@ -133,6 +166,7 @@
                 android:id="@+id/courseCancelButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTint="#838181"
                 android:text="CANCEL" />
 
         </LinearLayout>
