--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundColor"
     tools:context=".UI.MainScreen">
 
     <Button
@@ -13,6 +14,7 @@
         android:layout_height="99dp"
         android:layout_marginStart="80dp"
         android:layout_marginTop="49dp"
+        android:backgroundTint="#2196F3"
         android:text="Courses"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintStart_toEndOf="@+id/termsButton"
@@ -25,6 +27,7 @@
         android:layout_marginStart="48dp"
         android:layout_marginTop="49dp"
         android:layout_marginEnd="80dp"
+        android:backgroundTint="#2196F3"
         android:text="Terms"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         app:layout_constraintEnd_toStartOf="@+id/coursesButton"
@@ -39,6 +42,7 @@
         android:layout_marginStart="146dp"
         android:layout_marginTop="88dp"
         android:layout_marginEnd="147dp"
+        android:backgroundTint="#2196F3"
         android:scrollbarStyle="insideOverlay"
         android:text="Assessments"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
@@ -48,6 +52,8 @@
 
     <TextView
         android:id="@+id/textView"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor"
         android:layout_width="193dp"
         android:layout_height="37dp"
         android:layout_marginStart="109dp"
