--- a/app/src/main/res/layout/activity_term_list.xml
+++ b/app/src/main/res/layout/activity_term_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundColor"
     tools:context=".UI.TermList">
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -21,6 +22,8 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/termRecyclerView"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="2dp"
