--- a/app/src/main/res/layout/term_list_item.xml
+++ b/app/src/main/res/layout/term_list_item.xml
@@ -4,10 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/backgroundColor"
     android:layout_margin="20dp">
 
     <TextView
         android:id="@+id/textView2"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:text="Term"
