--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray">#838181</color>
+    <color name="light_blue">#2196F3</color>
+    <color name="textColor">#FFFFFF</color>
+    <color name="backgroundColor">#212121</color>
 </resources>
