--- a/app/src/main/res/layout-land/activity_course_details.xml
+++ b/app/src/main/res/layout-land/activity_course_details.xml
@@ -35,6 +35,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:autofillHints="Course Name"
+                android:textAlignment="center"
                 android:ems="10"
                 android:hint="Course Name"
                 android:inputType="text" />
