--- a/app/src/main/res/layout/activity_assessment_details.xml
+++ b/app/src/main/res/layout/activity_assessment_details.xml
@@ -7,109 +7,126 @@
     android:background="@color/backgroundColor"
     tools:context=".UI.AssessmentDetails">
 
-    <LinearLayout
+    
+    <EditText
+        android:id="@+id/assessmentName"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginStart="1dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:autofillHints="Assessment Name"
+        android:ems="10"
+        android:hint="Assessment Name"
+        android:inputType="text"
+        android:textAlignment="center"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <EditText
-            android:id="@+id/assessmentName"
-            android:textColor="@color/textColor"
-            android:textColorHint="@color/textColor"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:autofillHints="Assessment Name"
-            android:ems="10"
-            android:hint="Assessment Name"
-            android:inputType="text" />
-
-        <EditText
-            android:id="@+id/assessmentType"
-            android:textColor="@color/textColor"
-            android:textColorHint="@color/textColor"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:autofillHints="Assessment Type"
-            android:ems="10"
-            android:hint="Assessment Type"
-            android:inputType="text" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/assessmentStartDate"
-                android:textColor="@color/textColor"
-                android:textColorHint="@color/textColor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:autofillHints="Start Date"
-                android:ems="10"
-                android:hint="Start Date"
-                android:inputType="none" />
-
-            <TextView
-                android:id="@+id/textView6"
-                android:textColor="@color/textColor"
-                android:textColorHint="@color/textColor"
-                android:layout_width="63dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="-"
-                android:textAlignment="center"
-                android:textSize="20sp" />
-
-            <EditText
-                android:id="@+id/assessmentEndDate"
-                android:textColor="@color/textColor"
-                android:textColorHint="@color/textColor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:autofillHints="End Date"
-                android:ems="10"
-                android:hint="End Date"
-                android:inputType="none" />
-        </LinearLayout>
-
-        <Spinner
-            android:id="@+id/courseSpinner"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:backgroundTint="@color/textColor"
-            android:textColor="@color/textColor"
-            android:textColorHint="@color/textColor" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
+    <EditText
+        android:id="@+id/assessmentType"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="54dp"
+        android:autofillHints="Assessment Type"
+        android:ems="10"
+        android:hint="Assessment Type"
+        android:inputType="text"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/assessmentStartDate" />
 
-        <Button
-            android:id="@+id/assessmentSaveButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="SAVE" />
+    <EditText
+        android:id="@+id/assessmentStartDate"
+        android:layout_width="173dp"
+        android:layout_height="51dp"
+        android:layout_weight="1"
+        android:autofillHints="Start Date"
+        android:ems="10"
+        android:hint="Start Date"
+        android:inputType="none"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/assessmentName" />
 
-        <Button
-            android:id="@+id/assessmentCancelButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#838181"
-            android:text="CANCEL" />
-    </LinearLayout>
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="63dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="8dp"
+        android:layout_weight="1"
+        android:text="-"
+        android:textAlignment="center"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/assessmentStartDate"
+        app:layout_constraintTop_toBottomOf="@+id/assessmentName" />
+
+    <EditText
+        android:id="@+id/assessmentEndDate"
+        android:layout_width="173dp"
+        android:layout_height="51dp"
+        android:layout_marginEnd="1dp"
+        android:layout_weight="1"
+        android:autofillHints="End Date"
+        android:ems="10"
+        android:hint="End Date"
+        android:inputType="none"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/assessmentName" />
+
+    <Spinner
+        android:id="@+id/courseSpinner"
+        android:layout_width="295dp"
+        android:layout_height="41dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="333dp"
+        android:backgroundTint="@color/textColor"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor"
+        app:layout_constraintBottom_toTopOf="@+id/assessmentSaveButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/assessmentType" />
+
+    <Button
+        android:id="@+id/assessmentSaveButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="SAVE"
+        app:layout_constraintBottom_toTopOf="@+id/assessmentCancelButton"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/assessmentCancelButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="5dp"
+        android:backgroundTint="#838181"
+        android:text="CANCEL"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="88dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="332dp"
+        android:text="Courses:"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor"
+        app:layout_constraintBottom_toTopOf="@+id/assessmentSaveButton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/assessmentType" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
