--- a/app/src/main/res/layout/activity_term_details.xml
+++ b/app/src/main/res/layout/activity_term_details.xml
@@ -7,96 +7,101 @@
     android:background="@color/backgroundColor"
     tools:context=".UI.TermDetails">
 
-    <LinearLayout
+
+    <EditText
+        android:id="@+id/termName"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_height="wrap_content"
+        android:autofillHints="Term Name"
+        android:hint="Term Name"
+        android:inputType="text"
+        android:textAlignment="center"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
-
-        <EditText
-            android:id="@+id/termName"
-            android:textColor="@color/textColor"
-            android:textColorHint="@color/textColor"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:autofillHints="Term Name"
-            android:hint="Term Name"
-            android:inputType="text" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/termStartDate"
-                android:textColor="@color/textColor"
-                android:textColorHint="@color/textColor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:autofillHints="Start Date"
-                android:ems="10"
-                android:hint="Start Date"
-                android:inputType="none" />
-
-            <TextView
-                android:id="@+id/textView5"
-                android:textColor="@color/textColor"
-                android:textColorHint="@color/textColor"
-                android:layout_width="63dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="-"
-                android:textAlignment="center"
-                android:textSize="20sp" />
-
-            <EditText
-                android:id="@+id/termEndDate"
-                android:textColor="@color/textColor"
-                android:textColorHint="@color/textColor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:autofillHints="End Date"
-                android:ems="10"
-                android:hint="End Date"
-                android:inputType="none" />
-        </LinearLayout>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/courseRecyclerViewForTerm"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <Button
-            android:id="@+id/termSaveButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="SAVE" />
-
-        <Button
-            android:id="@+id/termCancelButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="#838181"
-            android:text="CANCEL" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" />
+    <EditText
+        android:id="@+id/termStartDate"
+        android:layout_width="173dp"
+        android:layout_height="51dp"
+        android:layout_weight="1"
+        android:autofillHints="Start Date"
+        android:ems="10"
+        android:hint="Start Date"
+        android:inputType="none"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/termName" />
 
-    </LinearLayout>
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="63dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="9dp"
+        android:layout_weight="1"
+        android:text="-"
+        android:textAlignment="center"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor"
+        android:textSize="20sp"
+        app:layout_constraintStart_toEndOf="@+id/termStartDate"
+        app:layout_constraintTop_toBottomOf="@+id/termName" />
+
+    <EditText
+        android:id="@+id/termEndDate"
+        android:layout_width="173dp"
+        android:layout_height="51dp"
+        android:layout_weight="1"
+        android:autofillHints="End Date"
+        android:ems="10"
+        android:hint="End Date"
+        android:inputType="none"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/termName" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/courseRecyclerViewForTerm"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="89dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/termStartDate" />
+
+    <Button
+        android:id="@+id/termSaveButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="SAVE"
+        app:layout_constraintBottom_toTopOf="@+id/termCancelButton"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/termCancelButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#838181"
+        android:text="CANCEL"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="150dp"
+        android:layout_height="28dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="61dp"
+        android:text="Associated Courses:"
+        android:textColor="@color/textColor"
+        android:textColorHint="@color/textColor"
+        app:layout_constraintBottom_toTopOf="@+id/courseRecyclerViewForTerm"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/termStartDate" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
