--- a/app/src/main/res/layout-land/activity_course_details.xml
+++ b/app/src/main/res/layout-land/activity_course_details.xml
@@ -127,6 +127,18 @@
                 android:hint="Instructor Email"
                 android:inputType="textEmailAddress" />
 
+            <EditText
+                android:id="@+id/courseNotes"
+                android:layout_width="match_parent"
+                android:layout_height="112dp"
+                android:autofillHints="Notes:"
+                android:ems="10"
+                android:gravity="start|top"
+                android:hint="Notes:"
+                android:inputType="textMultiLine"
+                android:textColor="@color/textColor"
+                android:textColorHint="@color/textColor" />
+
             <Spinner
                 android:id="@+id/termSpinner"
                 android:textColor="@color/textColor"
@@ -134,6 +146,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:backgroundTint="@color/textColor" />
+
+            <TextView
+                android:id="@+id/textView10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Associated Assessments:"
+                android:textColor="@color/textColor"
+                android:textColorHint="@color/textColor"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -144,18 +164,6 @@
                 android:id="@+id/assessmentRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="138dp" />
-
-            <EditText
-                android:id="@+id/courseNotes"
-                android:textColor="@color/textColor"
-                android:textColorHint="@color/textColor"
-                android:layout_width="match_parent"
-                android:layout_height="112dp"
-                android:autofillHints="Notes:"
-                android:ems="10"
-                android:gravity="start|top"
-                android:hint="Notes:"
-                android:inputType="textMultiLine" />
 
             <Button
                 android:id="@+id/courseSaveButton"
